fixed alignment for new layout

--- a/homepage.css
+++ b/homepage.css
@@ -1,3 +1,21 @@
+/* homepage.css */
+
+/* ===== Body ===== */
+body {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff;
+}
+
+/* ===== Container ===== */
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 92.5vh;
+    justify-content: center;
+    align-items: center;
+}
+
 #pfp img {
     border-radius: 50%;
     width: 200px;
@@ -8,17 +26,17 @@
     border: 2px solid #ffffff;
 }
 
-#heading h1 {
-    font-size:  3em;
+#name h1 {
+    font-size: 3em;
 
 }
 
-#subheading h3 {
+#title h3 {
     font-size: 2em;
 
 }
 
-#links icons {
+#links .icons {
     list-style: none;
 }
 
@@ -29,10 +47,19 @@
 
 #links .icons a {
     transition: transform 0.3s ease;
+    text-decoration: none;
 }
 
-#links .icons a:link {
+#links .icons:visited {
     color: white;
+}
+
+#links .icons a.fa-solid, #links .icons a.fa-brands {
+    color: white;
+}
+
+#links .icons a:active {
+    color: #9873AC;
 }
 
 #links .icons a:hover {
@@ -43,26 +70,9 @@
 /* ====== Miscellaneous ===== */
 
 .outlined-text {
-    text-shadow: 
-        -1px -1px 0 #000,  
-         1px -1px 0 #000,
-        -1px  1px 0 #000,
-         1px  1px 0 #000;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 }
-
-a {
-    text-decoration: none;
-}
-
-a:visited {
-    color: #ffffff;
-}
-
-a:active {
-    color: #9873AC;
-}
-
-
-
-
-
